<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/btn_back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        android:background="@null"/>

    <ImageView
        android:id="@+id/iv_icon_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_main_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_below="@id/iv_icon_sign_in"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_txt_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_enjoy"
        android:layout_below="@+id/tv_sign_in"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"/>

    <CheckBox
        android:id="@+id/cb_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="36dp"
        android:text="@string/txt_using_mobile"
        android:layout_below="@id/tv_txt_sign_in"
        android:fontFamily="@font/poppins_regular"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:buttonTint="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        style="@style/InputWrapper"
        android:layout_below="@+id/cb_mobile"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_email"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/tvBlue"
                android:text="@string/email"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/InputWrapper"
        android:id="@+id/cv_password"
        android:layout_below="@+id/cv_email"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_key"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/tvBlue"
                android:text="@string/password"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_sign_up"
        style="@style/ButtonBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cv_password"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_forgot"
        style="@style/ButtonLink"
        android:layout_below="@id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/txt_forgot_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_new_user"
        style="@style/ButtonLink"
        android:layout_below="@id/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/txt_new_user"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"/>
</RelativeLayout>